src/newtab/note.css
* {
  box-sizing: border-box;
}
html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}
body {
  background: rgba(0,0,0,0.03);
}
.note-wrapper {
  height: 99%;
  padding: 0 0 0 0;
}
.note-container {
  width: 100%;
  /*max-width: 900px; */
  margin: 0 auto;
  min-height: 100%;
  padding: 40px 40px;
  outline: 0;
  border: 0;
  font-size: 16px;
  background: rgba(255,255,255,1);
  white-space: pre-wrap;
}

.theme-dark
{
  color: #FCFCFC;
  background: #333333;
}

